tests/rosetta/out/Smalltalk/average-loop-length.out
/workspace/mochi/tests/rosetta/out/Smalltalk/average-loop-length.st:6: parse error, expected integer literal or floating-point literal or decimal literal
